--- a/templates/service_details.html
+++ b/templates/service_details.html
@@ -57,7 +57,7 @@
       <div class="price">💰 Price: {{ service.price }}</div>
     </div>
 
-    <a class="back-link" href="{{ url_for('services') }}"><i class="fas fa-arrow-left"></i> Back to Services</a>
+    <a class="back-link" href="{{ url_for('services_page') }}"><i class="fas fa-arrow-left"></i> Back to Services</a>
   </div>
 </body>
 </html>
